test/negative/constructor_arity1.mli.expected

*******************************
********** Parsed file ********
*******************************
type t =
  | C of int * int 
val f : int -> t -> unit[@@gospel
                          {| f n t
    requires let x = (n, n) in C x = C x |}]

*******************************
****** GOSPEL translation *****
*******************************
(*@ open Gospelstdlib *)

type t =
| C of int * int 
  

val f : int -> t -> unit
(*@  f n t
    requires ...
     *)
File "constructor_arity1.mli", line 5, characters 31-32:
Error: Symbol C cannot be partially applied
